--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -69,9 +69,11 @@
 				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
 				<version>2.2.1.RELEASE</version>
 				<extensions>true</extensions>
-				<configuration>
-					<testFramework>JUNIT5</testFramework>
-				</configuration>
+                <configuration>
+                    <testFramework>JUNIT5</testFramework>
+                    <baseClassForTests>com.devoxx.inventory.contracts.ContractsBase</baseClassForTests>
+                    <convertToYaml>true</convertToYaml>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
