--- a/checkout/pom.xml
+++ b/checkout/pom.xml
@@ -90,6 +90,16 @@
 
 	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+                <version>2.2.1.RELEASE</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <testFramework>JUNIT5</testFramework>
+                    <baseClassForTests>com.devoxx.checkout.contracts.ContractsBase</baseClassForTests>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
