--- a/checkout/src/main/resources/application.yml
+++ b/checkout/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8081
 
 spring:
+  jackson:
+    serialization:
+      write_dates_as_timestamps: false
   cloud:
     stream:
       bindings:
@@ -20,4 +23,3 @@ spring:
                 username: guest
                 password: guest
                 virtual-host: /
-
