--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -43,11 +43,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency-->
 	</dependencies>
 
 	<dependencyManagement>
@@ -64,7 +64,7 @@
 
 	<build>
 		<plugins>
-			<plugin>
+			<!--plugin>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
 				<version>2.2.1.RELEASE</version>
@@ -73,7 +73,7 @@
                     <!-- TO COMPLETE -->
                     <testFramework>JUNIT5</testFramework>
                 </configuration>
-			</plugin>
+			</plugin-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
