--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -20,13 +20,6 @@
 	</properties>
 
 	<dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
-            <scope>provided</scope>
-        </dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -43,11 +36,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!--dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
 			<scope>test</scope>
-		</dependency-->
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -64,16 +57,16 @@
 
 	<build>
 		<plugins>
-			<!--plugin>
+			<plugin>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
 				<version>2.2.1.RELEASE</version>
 				<extensions>true</extensions>
                 <configuration>
-                    TO COMPLETE
+					<baseClassForTests>com.devoxx.inventory.contracts.ContractsBase</baseClassForTests>
                     <testFramework>JUNIT5</testFramework>
                 </configuration>
-			</plugin-->
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
