Working provider test

--- a/checkout/src/test/resources/application.yml
+++ b/checkout/src/test/resources/application.yml
@@ -4,3 +4,8 @@ stubrunner:
   repositoryRoot: XXX
   setStubsPerConsumer: XXX
   consumerName: XXX
+
+pactbroker:
+  host: magelle.pact.dius.com.au
+  auth:
+    token: ZOhnNi5ai-J1jXja2P7ytg
