--- a/checkout/pom.xml
+++ b/checkout/pom.xml
@@ -99,6 +99,17 @@
 					<pactBrokerAuthenticationScheme>Bearer</pactBrokerAuthenticationScheme>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<environmentVariables>
+						<pact.verifier.publishResults>true</pact.verifier.publishResults>
+					</environmentVariables>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
