--- a/checkout/pom.xml
+++ b/checkout/pom.xml
@@ -58,17 +58,22 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>au.com.dius.pact.consumer</groupId>
 			<artifactId>junit5</artifactId>
 			<version>4.3.6</version>
 		</dependency>
+		-->
+
+		<!--
 		<dependency>
 			<groupId>au.com.dius.pact.provider</groupId>
 			<artifactId>junit5spring</artifactId>
 			<version>4.3.6</version>
 			<scope>test</scope>
 		</dependency>
+		-->
 	</dependencies>
 
 	<dependencyManagement>
@@ -90,16 +95,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>au.com.dius.pact.provider</groupId>
-				<artifactId>maven</artifactId>
-				<version>4.1.11</version>
-				<configuration>
-					<pactBrokerUrl>https://magelle.pactflow.io</pactBrokerUrl>
-					<pactBrokerToken>[pact broker token]</pactBrokerToken> <!-- Replace TOKEN with the actual token -->
-					<pactBrokerAuthenticationScheme>Bearer</pactBrokerAuthenticationScheme>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
@@ -110,6 +105,18 @@
 					</environmentVariables>
 				</configuration>
 			</plugin>
+			<!--
+			<plugin>
+				<groupId>au.com.dius.pact.provider</groupId>
+				<artifactId>maven</artifactId>
+				<version>4.1.11</version>
+				<configuration>
+					<pactBrokerUrl>https://[my instance].pactflow.io</pactBrokerUrl>
+					<pactBrokerToken>[my api key]</pactBrokerToken>
+					<pactBrokerAuthenticationScheme>Bearer</pactBrokerAuthenticationScheme>
+				</configuration>
+			</plugin>
+			-->
 		</plugins>
 	</build>
 
