--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -15,7 +15,7 @@
 	<description>Devoxx Contract Testing Lab - Inventory</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.1</spring-cloud.version>
 	</properties>
 
@@ -41,11 +41,11 @@
 			<artifactId>spring-mock-mvc</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--dependency>
+<!--		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
 			<scope>test</scope>
-		</dependency-->
+		</dependency>-->
 	</dependencies>
 
 	<dependencyManagement>
@@ -62,16 +62,16 @@
 
 	<build>
 		<plugins>
-			<!--plugin>
+<!--			<plugin>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
-				<version>2.2.1.RELEASE</version>
+				<version>3.1.1</version>
 				<extensions>true</extensions>
                 <configuration>
                     TO COMPLETE
                     <testFramework>JUNIT5</testFramework>
                 </configuration>
-			</plugin-->
+			</plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
